--- a/Carrito.html
+++ b/Carrito.html
@@ -70,46 +70,41 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td class="text-center align-middle"><img src="imagenes/1.jpg" class="small-image">
-                                    </td>
+                                    <td class="text-center align-middle"><img src="imagenes/1.jpg" class="small-image"></td>
                                     <td class="text-center align-middle">Brócoli</td>
                                     <td class="text-center align-middle">₡1,800</td>
-                                    <td class="text-center align-middle">8</td>
+                                    <td class="text-center align-middle"><input type="number" class="form-control" value="8" min="1"></td>
                                     <td class="text-center align-middle">₡14,400</td>
                                     <td class="text-center align-middle"><button class="btn btn-danger delete-row">X</button></td>
                                 </tr>
                                 <tr>
-                                    <td class="text-center align-middle"><img src="imagenes/2.jpg" class="small-image">
-                                    </td>
+                                    <td class="text-center align-middle"><img src="imagenes/2.jpg" class="small-image"></td>
                                     <td class="text-center align-middle">Lechuga</td>
                                     <td class="text-center align-middle">₡350</td>
-                                    <td class="text-center align-middle">2</td>
+                                    <td class="text-center align-middle"><input type="number" class="form-control" value="2" min="1"></td>
                                     <td class="text-center align-middle">₡700</td>
                                     <td class="text-center align-middle"><button class="btn btn-danger delete-row">X</button></td>
                                 </tr>
                                 <tr>
-                                    <td class="text-center align-middle"><img src="imagenes/3.jpg" class="small-image">
-                                    </td>
+                                    <td class="text-center align-middle"><img src="imagenes/3.jpg" class="small-image"></td>
                                     <td class="text-center align-middle">Manzana</td>
                                     <td class="text-center align-middle">₡580</td>
-                                    <td class="text-center align-middle">6</td>
-                                    <td class="text-center align-middle">3,480</td>
+                                    <td class="text-center align-middle"><input type="number" class="form-control" value="6" min="1"></td>
+                                    <td class="text-center align-middle">₡3,480</td>
                                     <td class="text-center align-middle"><button class="btn btn-danger delete-row">X</button></td>
                                 </tr>
                             </tbody>
                         </table>
                         <div class="row">
-                            <div class="col-md-6">
-                            </div>
+                            <div class="col-md-6"></div>
                             <div class="col-md-6 text-end">
                                 <strong>Total: <span id="totalAmount">₡18,580</span></strong>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6">
-                            </div>
+                            <div class="col-md-6"></div>
                             <div class="col-md-6 text-end">
-                                <a href="pago.html" class="btn btn-primary">Comprar</a>
+                                <a href="envio.html" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
