--- a/Pagina1.html
+++ b/Pagina1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <style>
         body {
             font-family: 'Bootstrap Icons', sans-serif;
+            background-color: #f8f9fa;
         }
 
         .header {
@@ -20,30 +22,30 @@
         }
 
         .product-container {
-            max-height: 600px;
-          
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
         .card {
             margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .card img {
-            max-width: 50%;
+            max-width: 100%;
             height: auto;
-            border-radius: 4px;
-            padding: 20px;
-            align-items: center;
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
         }
 
         .card-body {
-            display: flex;
-            flex-direction: column;
+            padding: 20px;
+            text-align: center;
         }
 
         .card-title {
-            font-size: 18px;
-            margin-top: 10px;
+            font-size: 16px;
+            margin-bottom: 10px;
         }
 
         .card-text {
@@ -52,25 +54,25 @@
         }
 
         .card-price {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: bold;
             color: #76b752;
+            margin-bottom: 15px;
         }
 
-        .col-md-4{
+        .col-md-4 {
             display: flex;
             justify-content: center;
         }
-        
-        .btnadd{
+
+        .btn-add {
             background-color: #76b752;
-            border-radius: 10px;
+            border-radius: 4px;
             font-family: "Lilita One";
             color: #fff;
+            padding: 8px 16px;
+            font-size: 14px;
         }
-
-
-
 
         .toggle {
             position: fixed;
@@ -116,6 +118,7 @@
 
     <title>Verduleria - Tienda de productos</title>
 </head>
+
 <body>
     <button class="toggle" onclick="toggleSidebar()">☰</button>
     <div class="header">
@@ -131,62 +134,100 @@
         <h1>Frutas</h1>
     </div>
 
-       <div class="container mt-5">
+    <div class="container mt-5 product-container">
         <div class="row">
-            <div class="col-md-12 product-container">
+            <div class="col-md-3">
                 <div class="card">
-                    <div class="row no-gutters">
-                        <div class="col-md-4">
-                            <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Manzana Roja</h5>
-                                <p class="card-text">Manzana Roja</p>
-                                <p class="card-price">$1</p>
-                                <button class="btnadd">Agregar al carrito</button>
-                            </div>
-                        </div>
+                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Manzana Roja</h5>
+                        <p class="card-text">Manzana Roja</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
                     </div>
                 </div>
-
-                <div class="card">
-                    <div class="row no-gutters">
-                        <div class="col-md-4">
-                            <img src="img/uvas1.png" class="card-img" alt="Producto 2">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Uvas Moradas</h5>
-                                <p class="card-text">Uvas moradas</p>
-                                <p class="card-price">$1</p>
-                                <button class="btnadd">Agregar al carrito</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="row no-gutters">
-                        <div class="col-md-4">
-                            <img src="img/banano1.jpg" class="card-img" alt="Producto 2">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Banano</h5>
-                                <p class="card-text">Banano </p>
-                                <p class="card-price">$1</p>
-                                <button class="btnadd">Agregar al carrito</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
             </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Manzana Roja</h5>
+                        <p class="card-text">Manzana Roja</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Manzana Roja</h5>
+                        <p class="card-text">Manzana Roja</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Manzana Roja</h5>
+                        <p class="card-text">Manzana Roja</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Manzana Roja</h5>
+                        <p class="card-text">Manzana Roja</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Manzana Roja</h5>
+                        <p class="card-text">Manzana Roja</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Manzana Roja</h5>
+                        <p class="card-text">Manzana Roja</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Manzana Roja</h5>
+                        <p class="card-text">Manzana Roja</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
@@ -209,4 +250,16 @@
         }
     </script>
 </body>
+
 </html>
+
+
+
+
+
+
+
+
+
+
+
