--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -8,6 +8,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
+        /* Estilos CSS existentes */
+
         body {
             background-color: #f5f5f5;
         }
@@ -210,15 +212,15 @@
         }
     </style>
 
-<div class="top-buttons">
-    <button class="btn btn-light">
-        Buscar
-        <span class="bi bi-search icon"></span>
-    </button>
-    <a href="Inicio_Sesion.html" class="btn btn-light">
-        <i class="bi bi-person-circle icon"></i>
-    </a>
-</div>
+    <div class="top-buttons">
+        <button class="btn btn-light">
+            Buscar
+            <span class="bi bi-search icon"></span>
+        </button>
+        <a href="Inicio_Sesion.html" class="btn btn-light">
+            <i class="bi bi-person-circle icon"></i>
+        </a>
+    </div>
 
     <button class="btn btn-dark" onclick="toggleSidebar()">☰</button>
 
@@ -229,6 +231,8 @@
         <a href="pagina2.html" class="btn btn-primary" style="font-size: 22px;">Verduras</a>
         <a href="pagina3.html" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
         <a href="Historial_Compras.html" class="btn btn-primary" style="font-size: 22px;">Historial de Compras</a>
+        <!-- Nuevo botón para agregar producto -->
+        <a href="producto.html" class="btn btn-primary" style="font-size: 22px;">Agregar Producto</a>
         <div class="sidebar-bottom">
             <a href="carrito.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-cart3"></i> Carrito</a>
             <a href="Contacto.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-telephone"></i> Contacto</a>
@@ -321,6 +325,7 @@
 </body>
 
 </html>
+
 
 
 
