--- a/Contacto.html
+++ b/Contacto.html
@@ -22,9 +22,8 @@
     <div class="row mt-3">
         <div class="col-md-12 text-center">
             <a href="Pagina_Principal.html" class="btn btn-secondary">Volver al Menú Principal</a>
-            <!-- Nuevo botón para iniciar sesión como administrador -->
-            <a href="#" class="btn btn-warning">Iniciar Sesión como Administrador</a>
         </div>
+    </div>
     </div>
 
     <div class="container mt-5">
